# SN8Flash

./: Cargo.toml  README.md  TODO.md
.github/workflows/: release.yaml
docs/: sonixflash-connection.kicad_sch
src/: chip.rs  error.rs  firmware.rs  flasher.rs  lib.rs  main.rs  sonixflash.rs  transport.rs
